--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=https://ec2-13-60-64-187.eu-north-1.compute.amazonaws.com/
+Backend_URL=https://ec2-13-60-64-187.eu-north-1.compute.amazonaws.com/
